--- a/package.json
+++ b/package.json
@@ -8,13 +8,15 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "vue": "^3.3.0",
-    "vue-router": "^4.2.0",
+    "@element-plus/icons-vue": "^2.1.0",
     "axios": "^1.4.0",
+    "echarts": "^6.0.0",
     "element-plus": "^2.3.0",
-    "@element-plus/icons-vue": "^2.1.0"
+    "vue": "^3.3.0",
+    "vue-router": "^4.2.0"
   },
   "devDependencies": {
+    "@iconify/vue": "^5.0.0",
     "@vue/cli-service": "^5.0.8",
     "vue-template-compiler": "^2.7.14"
   },
